# arago

./: README.md
arago/: pyproject.toml
arago/chatbot/: conftest.py  db.sqlite3  pytest.ini
arago/chatbot/chatbot/: kakao.py  settings.py  urls.py  wsgi.py
arago/chatbot/launch/: apps.py
arago/chatbot/teacher/: admin.py  models.py  urls.py  views.py
arago/chatbot/teacher/migrations/: 0001_initial.py  0002_alter_teacher_table.py
arago/chatbot/tests/: test_teacher.py
