[tool.poetry]
name = "arago"
version = "0.1.0"
description = "arago kakako chatbot dependencies"
authors = ["정명진 <thinkjin99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
pillow = "^10.3.0"
pytest = "^8.2.1"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
